@@ -1,5 +1,10 @@
 2008-08-12  Albert Graef  <Dr.Graef@t-online.de>
 
+	* interpreter.cc (builtin_codegen), runtime.cc(bigint_div,
+	bigint_mod): Handle division by zero by throwing a 'signal SIGFPE'
+	exception. Previously, these would just bail out with an unhandled
+	SIGFPE signal.
+
 	* lexer.ll: Fixed a bug in option parsing of the 'list' command
 	which would cause an option string starting with '-a' to be
 	interpreted as an ordinary argument.
